--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -143,7 +143,7 @@ nav ul li a:hover {
 
 /* Hero Section */
 .hero {
-    background: url('../img/hero-bg2.png') no-repeat center center/cover;
+    background: url('../img/hero-bg.png') no-repeat center center/cover;
     height: 100vh;
     color: #fff;
     display: flex;
